--- a/poneminas/src/App.css
+++ b/poneminas/src/App.css
@@ -1,4 +1,6 @@
 .App {
-  text-align: center;
-  width : 100%;
+    text-align: center;
+    width: 100%;
+    position: relative;
+    height: 100%;
 }
