--- a/poneminas/src/modules/box/Box.css
+++ b/poneminas/src/modules/box/Box.css
@@ -10,3 +10,12 @@
     background-color: rgba(0, 0, 0, 0.4);
     border: 2px solid rgba(0, 0, 0, 0.1);
 }
+
+.grid-item.active {
+    background-color: white;
+    border: 1px solid darkgray;
+}
+
+.fa-bomb{
+    color: red;
+}
