sign in with meteor

--- a/pongaminas/client/main.css
+++ b/pongaminas/client/main.css
@@ -1,4 +1,10 @@
-body {
-  padding: 10px;
-  font-family: sans-serif;
+html, body {
+  margin: 0;
+  height: 100%;
+  font-family: sans-serif;  
+}
+
+#render-target {
+  margin: 0;
+  height: 100%;
 }
