--- a/pongaminas/imports/ui/App.css
+++ b/pongaminas/imports/ui/App.css
@@ -4,3 +4,29 @@
     position: relative;
     height: 100%;
 }
+
+.App .signIn {
+    position: absolute;
+    /* float:left; */
+    left: 1%;
+    top: 2%;
+}
+.container { 
+    /* position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)  */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+/* .welcome {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%) 
+} */
