--- a/pongaminas/imports/ui/modules/board/Board.css
+++ b/pongaminas/imports/ui/modules/board/Board.css
@@ -9,7 +9,7 @@
 .grid-container {
     display: grid;
     padding: 10px;
-    position: absolute;
+    /* position: absolute; */
     /*left: 50%;*/
     /*transform: translateX(-50%);*/
 }
