--- a/pongaminas/imports/ui/modules/box/Box.css
+++ b/pongaminas/imports/ui/modules/box/Box.css
@@ -12,6 +12,7 @@
 
 .grid-item:hover {
     background-color: rgba(0, 0, 0, 0.4);
+    color: white;
     border: 2px solid rgba(0, 0, 0, 0.1);
 }
 
